--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -991,6 +991,7 @@
     <string name="mine_text1">扫一扫上面的二维码 \n即可下载无限淘，成为我的好友</string>
     <string name="mine_text2">我的邀请码</string>
     <string name="mine_text3">余额提现</string>
+    <string name="mine_text4">我的刮刮卡</string>
 
     <string name="myfriend_earn">累计收益:</string>
     <string name="myfriend_earn_zhitui">直推好友返利</string>
