二级密码设置及更改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="change_info">更改信息</string>
     <string name="detail">明细</string>
     <string name="balance">余额</string>
+    <string name="balance_my_detail">历史明细</string>
     <string name="balance_my">我的余额</string>
     <string name="balance_my_num">￥2222.21元</string>
     <string name="balance_my_add">已累计提现￥23.26元</string>
@@ -295,7 +296,7 @@
     <string name="input_name">请输入收款人姓名</string>
     <string name="input_old_pw">请输入原密码</string>
     <string name="input_new_pw">请输入新密码</string>
-    <string name="input_new_pw_hint">密码限制6位纯数字,修改密码时原密码必须填写</string>
+    <string name="input_new_pw_hint">设置或者修改二级密码,密码限制6位纯数字,修改密码时原密码必须填写</string>
     <string name="payee_name">收款人姓名</string>
     <string name="alipay_bangding">绑定支付宝</string>
     <string name="alipay_change">更换支付宝</string>
@@ -361,7 +362,7 @@
     <string name="number_error">手机号格式错误,请重新输入</string>
     <string name="setting_pw">设置密码</string>
     <string name="setting_new_pw">请设置您的新密码</string>
-    <string name="udpate_pw">修改密码</string>
+    <string name="udpate_pw">二级密码</string>
     <string name="udpate_submit">提交</string>
     <string name="pass_word_rule">密码为3~16位非中文字符，区分大小写</string>
     <string name="confirm_setting">确认设置</string>
