--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,7 +285,7 @@
     <string name="income_legend">收益说明</string>
     <string name="my_income">我的收益</string>
     <string name="play">玩法</string>
-    <string name="admin_login">账号秘密登陆</string>
+    <string name="admin_login">账号密码登陆</string>
     <string name="code_login_registered">验证码登陆/注册</string>
     <string name="login">登陆</string>
     <string name="red_pg">红包:</string>
