--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="invite_friend">邀请好友，躺赚好友每单收益</string>
     <string name="share">推广邀请</string>
     <string name="share_cha">分享到</string>
+    <string name="share_desc">首次分享可以获得奖励哦</string>
     <string name="friend_boost_">好友助力</string>
     <string name="frequent_shopping">频繁购物</string>
     <string name="buy">买买买能更快提升利率，花得多，赚的多</string>
